OVERFLOW FIX

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -202,12 +202,14 @@ header.breadcrumbs {
             .search-results-wrapper{
                 @apply relative z-50 ;
 
-                max-height: 40vh;
                 
-                overflow: auto;  
+                
 
                 .search-results{
                     @apply absolute top-20 right-0 bg-primary-1 text-white p-2;
+                    
+                overflow-y: scroll;  
+                max-height: 40vh;
                     
 
                     p{
